src/parser/generated/JSONPathParser.js
// Generated from ./src/parser/generated/JSONPath.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import JSONPathListener from './JSONPathListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class JSONPathParser extends antlr4.Parser {

    static grammarFileName = "JSONPath.g4";
    static literalNames = [ null, "'@'", "'..'", "'$'", "'.'", "'*'", "'&&'", 
                            "'=='", "'>='", "'>'", "'<='", "'<'", "'!='", 
                            "'=~'", "' in '", "' nin '", "' subsetof '", 
                            "' anyof '", "' noneof '", "' size '", "'!'", 
                            "'||'", "'true'", "'false'", "'null'", "'{'", 
                            "'}'", "'['", "']'", "':'", "','", "'('", "')'", 
                            "'?'", "'- '", "'+'", "'/'", "'length()'" ];
    static symbolicNames = [ null, "CURRENT_VALUE", "DOTDOT", "ROOT_VALUE", 
                             "DOT", "STAR", "AND", "EQ", "GE", "GT", "LE", 
                             "LT", "NE", "REG", "IN", "NIN", "SUB", "ANY", 
                             "NON", "SIZ", "NOT", "OR", "TRUE", "FALSE", 
                             "NULL", "BRACE_LEFT", "BRACE_RIGHT", "BRACKET_LEFT", 
                             "BRACKET_RIGHT", "COLON", "COMMA", "PAREN_LEFT", 
                             "PAREN_RIGHT", "QUESTION", "MINUS_SP", "PLUS", 
                             "DIV", "FN_LEN", "REGEX_OPT", "REGEX_EXPR", 
                             "KEY", "SPECIAL_KEY", "WS", "NUMBER", "STRING" ];
    static ruleNames = [ "jsonpath", "function", "filterarg", "subscript", 
                         "dotdotContent", "dotContent", "bracket", "bracketContent", 
                         "filterExpression", "indexes", "unions", "slices", 
                         "regex", "expression", "filterpath", "identifier", 
                         "obj", "pair", "array", "value" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = JSONPathParser.ruleNames;
        this.literalNames = JSONPathParser.literalNames;
        this.symbolicNames = JSONPathParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 2:
    	    		return this.filterarg_sempred(localctx, predIndex);
    	case 13:
    	    		return this.expression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    filterarg_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 4);
    		case 1:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 7);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	jsonpath() {
	    let localctx = new JsonpathContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, JSONPathParser.RULE_jsonpath);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 40;
	        this.match(JSONPathParser.ROOT_VALUE);
	        this.state = 42;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 134217748) !== 0)) {
	            this.state = 41;
	            this.subscript();
	        }

	        this.state = 44;
	        this.match(JSONPathParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	function_() {
	    let localctx = new FunctionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, JSONPathParser.RULE_function);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 46;
	        this.match(JSONPathParser.FN_LEN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	filterarg(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new FilterargContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 4;
	    this.enterRecursionRule(localctx, 4, JSONPathParser.RULE_filterarg, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 55;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 31:
	            this.state = 49;
	            this.match(JSONPathParser.PAREN_LEFT);
	            this.state = 50;
	            this.filterarg(0);
	            this.state = 51;
	            this.match(JSONPathParser.PAREN_RIGHT);
	            break;
	        case 22:
	        case 23:
	        case 24:
	        case 25:
	        case 27:
	        case 43:
	        case 44:
	            this.state = 53;
	            this.value();
	            break;
	        case 1:
	        case 3:
	            this.state = 54;
	            this.filterpath();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 67;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,4,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 65;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new FilterargContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, JSONPathParser.RULE_filterarg);
	                    this.state = 57;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 58;
	                    _la = this._input.LA(1);
	                    if(!(_la===5 || _la===36)) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 59;
	                    this.filterarg(5);
	                    break;

	                case 2:
	                    localctx = new FilterargContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, JSONPathParser.RULE_filterarg);
	                    this.state = 60;
	                    if (!( this.precpred(this._ctx, 3))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                    }
	                    this.state = 62;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    if(_la===34 || _la===35) {
	                        this.state = 61;
	                        _la = this._input.LA(1);
	                        if(!(_la===34 || _la===35)) {
	                        this._errHandler.recoverInline(this);
	                        }
	                        else {
	                        	this._errHandler.reportMatch(this);
	                            this.consume();
	                        }
	                    }

	                    this.state = 64;
	                    this.filterarg(4);
	                    break;

	                } 
	            }
	            this.state = 69;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,4,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	subscript() {
	    let localctx = new SubscriptContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, JSONPathParser.RULE_subscript);
	    try {
	        this.state = 84;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 70;
	            this.match(JSONPathParser.DOTDOT);
	            this.state = 71;
	            this.dotdotContent();
	            this.state = 73;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	            if(la_===1) {
	                this.state = 72;
	                this.subscript();

	            }
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 75;
	            this.match(JSONPathParser.DOT);
	            this.state = 76;
	            this.dotContent();
	            this.state = 78;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	            if(la_===1) {
	                this.state = 77;
	                this.subscript();

	            }
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 80;
	            this.bracket();
	            this.state = 82;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	            if(la_===1) {
	                this.state = 81;
	                this.subscript();

	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dotdotContent() {
	    let localctx = new DotdotContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, JSONPathParser.RULE_dotdotContent);
	    try {
	        this.state = 89;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 86;
	            this.match(JSONPathParser.STAR);
	            break;
	        case 22:
	        case 23:
	        case 24:
	        case 40:
	        case 41:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 87;
	            this.identifier();
	            break;
	        case 27:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 88;
	            this.bracket();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dotContent() {
	    let localctx = new DotContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, JSONPathParser.RULE_dotContent);
	    try {
	        this.state = 95;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 37:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 91;
	            this.function_();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 92;
	            this.match(JSONPathParser.STAR);
	            break;
	        case 43:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 93;
	            this.match(JSONPathParser.NUMBER);
	            break;
	        case 22:
	        case 23:
	        case 24:
	        case 40:
	        case 41:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 94;
	            this.identifier();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bracket() {
	    let localctx = new BracketContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, JSONPathParser.RULE_bracket);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this.match(JSONPathParser.BRACKET_LEFT);
	        this.state = 98;
	        this.bracketContent();
	        this.state = 99;
	        this.match(JSONPathParser.BRACKET_RIGHT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bracketContent() {
	    let localctx = new BracketContentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, JSONPathParser.RULE_bracketContent);
	    try {
	        this.state = 109;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 101;
	            this.unions();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 102;
	            this.indexes();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 103;
	            this.slices();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 104;
	            this.match(JSONPathParser.STAR);
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 105;
	            this.match(JSONPathParser.NUMBER);
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 106;
	            this.match(JSONPathParser.STRING);
	            break;

	        case 7:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 107;
	            this.identifier();
	            break;

	        case 8:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 108;
	            this.filterExpression();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	filterExpression() {
	    let localctx = new FilterExpressionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, JSONPathParser.RULE_filterExpression);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 111;
	        this.match(JSONPathParser.QUESTION);
	        this.state = 112;
	        this.match(JSONPathParser.PAREN_LEFT);
	        this.state = 113;
	        this.expression(0);
	        this.state = 114;
	        this.match(JSONPathParser.PAREN_RIGHT);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	indexes() {
	    let localctx = new IndexesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, JSONPathParser.RULE_indexes);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 116;
	        this.match(JSONPathParser.NUMBER);
	        this.state = 119; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 117;
	            this.match(JSONPathParser.COMMA);
	            this.state = 118;
	            this.match(JSONPathParser.NUMBER);
	            this.state = 121; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===30);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unions() {
	    let localctx = new UnionsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, JSONPathParser.RULE_unions);
	    var _la = 0;
	    try {
	        this.state = 137;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 44:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 123;
	            this.match(JSONPathParser.STRING);
	            this.state = 126; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 124;
	                this.match(JSONPathParser.COMMA);
	                this.state = 125;
	                this.match(JSONPathParser.STRING);
	                this.state = 128; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===30);
	            break;
	        case 22:
	        case 23:
	        case 24:
	        case 40:
	        case 41:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 130;
	            this.identifier();
	            this.state = 133; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 131;
	                this.match(JSONPathParser.COMMA);
	                this.state = 132;
	                this.identifier();
	                this.state = 135; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===30);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	slices() {
	    let localctx = new SlicesContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, JSONPathParser.RULE_slices);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 140;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===43) {
	            this.state = 139;
	            this.match(JSONPathParser.NUMBER);
	        }

	        this.state = 142;
	        this.match(JSONPathParser.COLON);
	        this.state = 144;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===43) {
	            this.state = 143;
	            this.match(JSONPathParser.NUMBER);
	        }

	        this.state = 150;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===29) {
	            this.state = 146;
	            this.match(JSONPathParser.COLON);
	            this.state = 148;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===43) {
	                this.state = 147;
	                this.match(JSONPathParser.NUMBER);
	            }

	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	regex() {
	    let localctx = new RegexContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, JSONPathParser.RULE_regex);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 152;
	        this.match(JSONPathParser.REGEX_EXPR);
	        this.state = 154;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,20,this._ctx);
	        if(la_===1) {
	            this.state = 153;
	            this.match(JSONPathParser.REGEX_OPT);

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expression(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExpressionContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 26;
	    this.enterRecursionRule(localctx, 26, JSONPathParser.RULE_expression, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 178;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,21,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 157;
	            this.match(JSONPathParser.NOT);
	            this.state = 158;
	            this.match(JSONPathParser.PAREN_LEFT);
	            this.state = 159;
	            this.expression(0);
	            this.state = 160;
	            this.match(JSONPathParser.PAREN_RIGHT);
	            break;

	        case 2:
	            this.state = 162;
	            this.match(JSONPathParser.PAREN_LEFT);
	            this.state = 163;
	            this.expression(0);
	            this.state = 164;
	            this.match(JSONPathParser.PAREN_RIGHT);
	            break;

	        case 3:
	            this.state = 166;
	            this.filterarg(0);
	            this.state = 167;
	            _la = this._input.LA(1);
	            if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 1040256) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 168;
	            this.filterarg(0);
	            break;

	        case 4:
	            this.state = 170;
	            this.filterarg(0);
	            this.state = 171;
	            this.match(JSONPathParser.REG);
	            this.state = 172;
	            this.regex();
	            break;

	        case 5:
	            this.state = 174;
	            this.filterpath();
	            break;

	        case 6:
	            this.state = 175;
	            this.match(JSONPathParser.TRUE);
	            break;

	        case 7:
	            this.state = 176;
	            this.match(JSONPathParser.FALSE);
	            break;

	        case 8:
	            this.state = 177;
	            this.match(JSONPathParser.NULL);
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 185;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,22,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new ExpressionContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, JSONPathParser.RULE_expression);
	                this.state = 180;
	                if (!( this.precpred(this._ctx, 7))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 7)");
	                }
	                this.state = 181;
	                _la = this._input.LA(1);
	                if(!(_la===6 || _la===21)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	                this.state = 182;
	                this.expression(8); 
	            }
	            this.state = 187;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,22,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	filterpath() {
	    let localctx = new FilterpathContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, JSONPathParser.RULE_filterpath);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 188;
	        _la = this._input.LA(1);
	        if(!(_la===1 || _la===3)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	        this.state = 190;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	        if(la_===1) {
	            this.state = 189;
	            this.subscript();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	identifier() {
	    let localctx = new IdentifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, JSONPathParser.RULE_identifier);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 192;
	        _la = this._input.LA(1);
	        if(!(((((_la - 22)) & ~0x1f) === 0 && ((1 << (_la - 22)) & 786439) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	obj() {
	    let localctx = new ObjContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, JSONPathParser.RULE_obj);
	    var _la = 0;
	    try {
	        this.state = 207;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,25,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 194;
	            this.match(JSONPathParser.BRACE_LEFT);
	            this.state = 195;
	            this.pair();
	            this.state = 200;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===30) {
	                this.state = 196;
	                this.match(JSONPathParser.COMMA);
	                this.state = 197;
	                this.pair();
	                this.state = 202;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 203;
	            this.match(JSONPathParser.BRACE_RIGHT);
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 205;
	            this.match(JSONPathParser.BRACE_LEFT);
	            this.state = 206;
	            this.match(JSONPathParser.BRACE_RIGHT);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


